# src/modules/contacts/useCases/createContact/CreateContactController.ts
@@ -5,25 +5,25 @@ import { formatName } from '../../../../utils/formatName';
 
 export class CreateContactController {
   async handle(request: Request, response: Response) {
-    const data = request.body.contacts; 
-    const client = 'varejao';
-    // const client = 'macapa';
+    const data = request.body.contacts;
+    const {username} = request;
 
     Object.keys(data).forEach((k) => {
-      if (data[k].name.trim().length === 0)
-        throw new Error('Name is required');
+        if (data[k].name.trim().length === 0) {
+            throw new Error('Name is required');
+        }
     });
     
     const contacts = data.map((contact) => ({
-        nome: formatName(contact.name,client),
-        celular: formatCellphone(contact.cellphone, client)
+        nome: formatName(contact.name,username),
+        celular: formatCellphone(contact.cellphone, username)
     })); 
 
     const createContactUseCase = new CreateContactUseCase();
 
     const result = await createContactUseCase.execute({
-      contacts
-    }, client);
+        contacts
+    }, username);
 
     return response.json({result});
   }
